--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
   <!-- HER SKAL NOGET -->
   <meta name="description" content="Svendeprove" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,0,0"/>
 </head>
 
 <body>
