--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,14 @@
 
 <head>
   <!-- HUSK TITEL HER !!! -->
-  <title></title>
+  <title>Strings Online</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <!-- HER SKAL NOGET -->
-  <meta name="description" content="Svendeprove" />
+  <meta name="description" content="Strings Online svendeprovestest" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,0,0"/>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,0,0"/>
 </head>
 
 <body>
